// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Components/LoadingSpinner CompactContainer smoke-test 1`] = `
<div class="flex justify-center items-center h-32 rounded-lg border bg-muted"
     id="_r_ID_"
     role="status"
     aria-live="polite"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
       aria-hidden="true"
  >
    <path d="M21 12a9 9 0 1 1-6.219-8.56">
    </path>
  </svg>
  <span class="sr-only">
    Loading…
  </span>
</div>
`;

exports[`Components/LoadingSpinner CustomSize smoke-test 1`] = `
<div class="flex justify-center items-center h-64"
     id="_r_ID_"
     role="status"
     aria-live="polite"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none text-primary size-20"
       aria-hidden="true"
  >
    <path d="M21 12a9 9 0 1 1-6.219-8.56">
    </path>
  </svg>
  <span class="sr-only">
    Loading dashboard…
  </span>
</div>
`;

exports[`Components/LoadingSpinner Default smoke-test 1`] = `
<div class="flex justify-center items-center h-64"
     id="_r_ID_"
     role="status"
     aria-live="polite"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
       aria-hidden="true"
  >
    <path d="M21 12a9 9 0 1 1-6.219-8.56">
    </path>
  </svg>
  <span class="sr-only">
    Loading…
  </span>
</div>
`;
